# spec-guard

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  IMPLEMENTATION_REPORT.md  LICENSE  README.md  SPECGUARD_PRODUCT_SPEC.md  SpecGuard_Presentation.pptx  action.yml  pyproject.toml
.claude/skills/clean-code/: SKILL.md
.claude/skills/git/: SKILL.md
.github/workflows/: specguard.yml  tests.yml
.playwright-mcp/: page-2026-06-12T03-18-42-296Z.yml  page-2026-06-12T03-19-07-349Z.yml
.specguard/: config.yml  lock.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: quickstart.md
specs/001-pr-spec-gate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pr-spec-gate/checklists/: requirements.md
specs/001-pr-spec-gate/contracts/: action-interface.md  classifier.md
specs/002-local-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-local-tools/checklists/: requirements.md
specs/002-local-tools/contracts/: adapter-protocol.md  cli-interface.md  mcp-interface.md
specs/003-provider-agnostic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-provider-agnostic/contracts/: provider-adapters.md
src/specguard/: __init__.py  approvals.py  ci.py  classifier.py  cli.py  config.py  engine.py  gitdiff.py  localcheck.py  localreport.py  mcp_server.py  models.py  providers.py  report.py  roles.py
tests/: conftest.py  test_approvals.py  test_ci.py  test_classifier.py  test_cli.py  test_config.py  test_engine.py  test_gitdiff.py  test_localcheck.py  test_mcp_server.py  test_parity.py  test_providers.py  test_roles.py
tests/eval/: run_eval.py
tests/fixtures/corpus/01_typo_fix/: expected.json  new.md
tests/fixtures/corpus/02_wording_clarification/: expected.json  new.md  old.md
tests/fixtures/corpus/03_formatting_only/: expected.json  new.md
tests/fixtures/corpus/04_in_scope_detail/: expected.json  new.md
tests/fixtures/corpus/05_adversarial_exclusion_mention/: expected.json  new.md
tests/fixtures/corpus/06_typo_multiple/: expected.json  new.md  scope.json
tests/fixtures/corpus/07_clarify_oauth_flow/: expected.json  new.md
tests/fixtures/corpus/08_add_example_in_scope/: expected.json  new.md  old.md
tests/fixtures/corpus/09_reorder_sections/: expected.json  new.md
tests/fixtures/corpus/10_grammar_fix/: expected.json  new.md
tests/fixtures/corpus/11_expand_quality_checks/: expected.json  new.md
tests/fixtures/corpus/12_add_faq_excluding_topic/: expected.json  new.md
tests/fixtures/corpus/13_fix_broken_link/: expected.json  new.md
tests/fixtures/corpus/14_add_install_instructions/: expected.json  new.md
tests/fixtures/corpus/15_tighten_goal_wording/: expected.json  new.md  old.md
tests/fixtures/corpus/16_saas_pricing_section/: expected.json  new.md
tests/fixtures/corpus/17_cloud_sync_feature/: expected.json  new.md  scope.json
tests/fixtures/corpus/18_goal_rewrite_webapp/: expected.json  new.md
tests/fixtures/corpus/19_add_2fa_plan/: expected.json  new.md
tests/fixtures/corpus/20_sso_active_directory/: expected.json  new.md
tests/fixtures/events/: pr_fork.json  pr_scope_change.json  pr_scope_change_review.json  pr_typo_fix.json  pr_typo_fix_review.json
(+15 files in other folders)
