[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specguard-ci"
version = "0.3.0"
description = "Semantic governance gate for spec files: classifies PR changes against a locked project goal and scope."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SpecGuard contributors" }]
keywords = ["governance", "spec", "github-actions", "scope", "llm"]
dependencies = [
    "anthropic>=0.49",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]
mcp = [
    "mcp>=1.0",
]
# Provider extras — the classifier backend (constitution: one output contract,
# many providers). Anthropic ships in the base install; the rest are opt-in.
# OpenRouter speaks the OpenAI wire protocol, so it reuses the openai extra.
openai = [
    "openai>=1.50",
]
gemini = [
    "google-genai>=0.3",
]

[project.scripts]
specguard = "specguard.cli:main"

[project.urls]
Repository = "https://github.com/Sawaiz-zip/spec-guard"

[tool.hatch.build.targets.wheel]
packages = ["src/specguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The embedded GitHub workflow template contains unbreakable long YAML lines.
"src/specguard/cli.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Provider SDKs are optional extras; CI type-checks without them installed.
module = ["openai.*", "google.genai.*", "google.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The MCP SDK is an optional extra; CI type-checks without it installed.
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastMCP's tool() decorator is untyped from mypy's view when the SDK is absent.
module = "specguard.mcp_server"
disallow_untyped_decorators = false
