[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specguard-ci"
version = "0.1.0"
description = "Semantic governance gate for spec files: classifies PR changes against a locked project goal and scope."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Sawaiz Naveed", email = "sawaiznaveed@gmail.com" },
]
maintainers = [
    { name = "Sawaiz Naveed", email = "sawaiznaveed@gmail.com" },
]
keywords = ["governance", "spec", "github-actions", "scope", "llm"]
dependencies = [
    "anthropic>=0.49",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[project.urls]
Repository = "https://github.com/Sawaiz-zip/spec-guard"

[tool.hatch.build.targets.wheel]
packages = ["src/specguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unreachable = true
